[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/KnightAni/Frame2.png" type="Texture" id=1]
[ext_resource path="res://Art/KnightAni/Frame1.png" type="Texture" id=2]
[ext_resource path="res://Art/KnightAni/Frame4.png" type="Texture" id=3]
[ext_resource path="res://Art/KnightAni/Frame10.png" type="Texture" id=4]
[ext_resource path="res://Art/KnightAni/Frame11.png" type="Texture" id=5]
[ext_resource path="res://Art/KnightAni/Frame6.png" type="Texture" id=6]
[ext_resource path="res://Art/KnightAni/Frame8.png" type="Texture" id=7]
[ext_resource path="res://Art/KnightAni/Frame12.png" type="Texture" id=8]
[ext_resource path="res://Art/KnightAni/Frame9.png" type="Texture" id=9]
[ext_resource path="res://Art/KnightAni/Frame3.png" type="Texture" id=10]
[ext_resource path="res://Art/KnightAni/Frame5.png" type="Texture" id=11]
[ext_resource path="res://Art/KnightAni/Frame7.png" type="Texture" id=12]
[ext_resource path="res://KnightTexture.gd" type="Script" id=13]
[ext_resource path="res://Knight.gd" type="Script" id=14]
[ext_resource path="res://KillZone.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "swing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.5, 223.375 )

[node name="Knight" type="KinematicBody2D"]
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false

[node name="KnightTexture" type="AnimatedSprite" parent="."]
position = Vector2( -66.5, 112.201 )
scale = Vector2( 0.282979, 0.282979 )
frames = SubResource( 1 )
animation = "swing"
script = ExtResource( 13 )

[node name="knight" type="Area2D" parent="KnightTexture"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnightTexture/knight"]
position = Vector2( -27, -4.375 )
shape = SubResource( 2 )

[node name="knight2" type="Area2D" parent="KnightTexture"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnightTexture/knight2"]
position = Vector2( -202, -13 )
shape = SubResource( 2 )

[node name="KillZone" type="Area2D" parent="KnightTexture"]
monitoring = false
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KnightTexture/KillZone"]
polygon = PoolVector2Array( 54.7744, 140.643, 344.549, 161.846, 358.684, 211.32, 401.09, 391.545, -238.534, 405.68, -217.331, 119.44 )

[node name="SwingZone" type="Area2D" parent="KnightTexture"]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KnightTexture/SwingZone"]
position = Vector2( 26.5038, 6.35715 )
polygon = PoolVector2Array( -162, -356, 50, -218, 84, 15, 215.564, 7.06787, 187.293, -275.639, -98.9473, -378.12 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="KnightTexture/SwingZone"]
position = Vector2( 37.1053, 48.7632 )
polygon = PoolVector2Array( 63.6089, -395.789, 120.15, -356.917, -54.7744, -294.019, -114.85, -11.312, -243.834, -35.3382, -180.225, -339.248, -7.06775, -413.458 )

[node name="rightScan" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rightScan"]
polygon = PoolVector2Array( 90, 203, 105, 227, 155, 216, 173, 203, 168, 128, 158, 84, 152, -20, 148, -117, 23, -124, -12, -118, -37, -111, -37, -42, -39, -21, -30, 17, 1, 61, -7, 113, 90, 110, 92, 189 )

[node name="leftScan" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="leftScan"]
polygon = PoolVector2Array( -177, 201, -174, 186, -163, 159, -167, 100, -71, 85, -75, 73, -94, 7, -106, -36, -99, -107, -189, -102, -249, -43, -293, 62, -278, 134, -284, 181, -283, 225, -236, 227, -175, 228 )

[connection signal="body_entered" from="rightScan" to="." method="_on_rightScan_body_entered"]
[connection signal="body_exited" from="rightScan" to="." method="_on_rightScan_body_exited"]
[connection signal="body_entered" from="leftScan" to="." method="_on_leftScan_body_entered"]
[connection signal="body_exited" from="leftScan" to="." method="_on_leftScan_body_exited"]
